// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes/components/settings/SettingsFooter.tsx app version should show development app version 1`] = `
<button
  class=" css-1aearyh"
  title="View Atlassify release notes"
  type="button"
>
  <span
    class=" css-1nqby2s"
  >
    Atlassify 
    dev
  </span>
</button>
`;

exports[`routes/components/settings/SettingsFooter.tsx app version should show production app version 1`] = `
<button
  class=" css-1aearyh"
  title="View Atlassify release notes"
  type="button"
>
  <span
    class=" css-1nqby2s"
  >
    Atlassify 
    v0.0.1
  </span>
</button>
`;
